--- a/Tradeterms/Base.lproj/Main.storyboard
+++ b/Tradeterms/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Vq-fa-X3d">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Vq-fa-X3d">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="150" translatesAutoresizingMaskIntoConstraints="NO" id="14f-uY-rda">
-                                <rect key="frame" x="20" y="142" width="335" height="312"/>
+                                <rect key="frame" x="20" y="142" width="335" height="255"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tradeterms" translatesAutoresizingMaskIntoConstraints="NO" id="1lK-Ps-WXx">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="114"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="57"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intercambia bienes con usuarios cerca y lejos de ti" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZO-ey-1ka">
-                                        <rect key="frame" x="0.0" y="264" width="335" height="48"/>
+                                        <rect key="frame" x="0.0" y="207" width="335" height="48"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -34,7 +34,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="xsj-4y-VfJ">
-                                <rect key="frame" x="30" y="604" width="315" height="98"/>
+                                <rect key="frame" x="30" y="547" width="315" height="98"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5P-Oe-b1K">
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="34"/>
@@ -146,7 +146,7 @@
                                     <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 </state>
                                 <connections>
-                                    <action selector="GoRCViewController:" destination="lla-f7-BQ0" eventType="touchUpInside" id="wlE-2m-aUk"/>
+                                    <action selector="GoRecuperarContrasena:" destination="lla-f7-BQ0" eventType="touchUpInside" id="jy5-XD-QDk"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -171,7 +171,7 @@
                         <viewLayoutGuide key="safeArea" id="zhX-JH-E0J"/>
                     </view>
                     <connections>
-                        <segue destination="gOO-F7-VCy" kind="show" identifier="GoRCSegue" id="kNr-ec-Kma"/>
+                        <segue destination="GbZ-wF-2Jo" kind="show" identifier="RecuperarContrasenaSegue" id="OeT-LA-8M4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZoO-LO-0cC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -179,47 +179,60 @@
             <point key="canvasLocation" x="2816.8000000000002" y="706.59670164917543"/>
         </scene>
         <!--RecuperarContrasena-->
-        <scene sceneID="6Bq-AC-b1V">
+        <scene sceneID="z0w-Uk-1ZP">
             <objects>
-                <viewController storyboardIdentifier="RCViewController" title="RecuperarContrasena" id="gOO-F7-VCy" customClass="RCViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Cyj-NU-Xcu" customClass="RCViewController">
+                <viewController storyboardIdentifier="RCViewController" title="RecuperarContrasena" id="GbZ-wF-2Jo" customClass="RCViewController" customModule="Tradeterms" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZYr-N2-b8o">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Escribe tu direccion email y te enviaremos un correo con los pasos para cambiar tu contraseña" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHJ-I8-ZF5">
-                                <rect key="frame" x="16" y="135" width="343" height="92"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JP0-Lm-78O">
-                                <rect key="frame" x="16" y="254" width="343" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yse-Xi-kaZ">
+                                <rect key="frame" x="20" y="246" width="335" height="30"/>
                                 <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NEb-ma-SP9">
-                                <rect key="frame" x="16" y="328" width="343" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.49034621879185014" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Rw-9y-eeW">
+                                <rect key="frame" x="20" y="356" width="335" height="33"/>
+                                <color key="backgroundColor" red="0.0" green="0.49034621880000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <state key="normal" title="Enviar">
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Escribe tu direccion email y te enviaremos un correo con los pasos para cambiar tu contraseña" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tF9-xe-uvp">
+                                <rect key="frame" x="20" y="105" width="335" height="61"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Gs7-gP-yXs"/>
-                        <connections>
-                            <outlet property="LabelMensaje" destination="DHJ-I8-ZF5" id="QFN-Qg-BSw"/>
-                        </connections>
+                        <constraints>
+                            <constraint firstItem="yse-Xi-kaZ" firstAttribute="leading" secondItem="HVO-sm-4MQ" secondAttribute="leading" constant="20" id="94a-Do-2Dw"/>
+                            <constraint firstItem="tF9-xe-uvp" firstAttribute="top" secondItem="HVO-sm-4MQ" secondAttribute="top" constant="41" id="ACn-f1-jr7"/>
+                            <constraint firstItem="tF9-xe-uvp" firstAttribute="leading" secondItem="HVO-sm-4MQ" secondAttribute="leading" constant="20" id="B0A-bL-Eu4"/>
+                            <constraint firstItem="5Rw-9y-eeW" firstAttribute="leading" secondItem="HVO-sm-4MQ" secondAttribute="leading" constant="20" id="F6m-dU-tgb"/>
+                            <constraint firstItem="yse-Xi-kaZ" firstAttribute="centerX" secondItem="ZYr-N2-b8o" secondAttribute="centerX" id="FtJ-Nv-VIc"/>
+                            <constraint firstItem="HVO-sm-4MQ" firstAttribute="trailing" secondItem="5Rw-9y-eeW" secondAttribute="trailing" constant="20" id="Q1V-pH-JTG"/>
+                            <constraint firstItem="HVO-sm-4MQ" firstAttribute="trailing" secondItem="yse-Xi-kaZ" secondAttribute="trailing" constant="20" id="Tgg-2X-KnR"/>
+                            <constraint firstItem="5Rw-9y-eeW" firstAttribute="centerX" secondItem="ZYr-N2-b8o" secondAttribute="centerX" id="dWU-e5-u9p"/>
+                            <constraint firstItem="yse-Xi-kaZ" firstAttribute="top" secondItem="tF9-xe-uvp" secondAttribute="bottom" constant="80" id="g65-Xd-gtM"/>
+                            <constraint firstItem="tF9-xe-uvp" firstAttribute="centerX" secondItem="ZYr-N2-b8o" secondAttribute="centerX" id="jQ4-Lj-4Zm"/>
+                            <constraint firstItem="5Rw-9y-eeW" firstAttribute="top" secondItem="yse-Xi-kaZ" secondAttribute="bottom" constant="80" id="l32-Jo-7r2"/>
+                            <constraint firstItem="HVO-sm-4MQ" firstAttribute="trailing" secondItem="tF9-xe-uvp" secondAttribute="trailing" constant="20" id="t5k-wa-GQT"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="HVO-sm-4MQ"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lyi-Sp-stB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zd2-nK-DNg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3607.1999999999998" y="706.59670164917543"/>
+            <point key="canvasLocation" x="3981.5999999999999" y="734.48275862068976"/>
         </scene>
         <!--Registro-->
         <scene sceneID="Nnt-jH-pxh">
@@ -320,7 +333,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Idj-pi-9Gs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3657" y="-106"/>
+            <point key="canvasLocation" x="3783" y="-125"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GFw-XU-3GW">
@@ -342,6 +355,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tradeterms" width="444" height="114"/>
+        <image name="tradeterms" width="222" height="57"/>
     </resources>
 </document>
